--- a/HygieaRecycle/package.json
+++ b/HygieaRecycle/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-preset-expo": "^4.0.0",
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-camera": "^1.0.3"
