--- a/HygieaWasteZero/app/build.gradle
+++ b/HygieaWasteZero/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation files('libs/httpmime-4.5.5.jar')
     implementation files('libs/jna-4.4.0.jar')
     implementation files('libs/jna-platform-4.4.0.jar')
+    compile 'com.koushikdutta.ion:ion:2.+'
+
 }
